# FaceMultiViewer

./: .gitignore  CMakeLists.txt  FaceMultiViewer.sln  README.md
FaceMultiViewer/: FaceMultiViewer.vcxproj  FaceMultiViewer.vcxproj.filters  assimp-vc140-mt.lib  camera.h  cursor.vs  face.fs  face.vs  face_multi_viewer.cpp  file_utils.h  model.h  points.fs  points.vs  quad.fs
FaceMultiViewer/Debug/: vc141.idb
include/: camera.h  config.h.in  data_manager.h  mesh.h  model.h  render_manager.h  rotate_camera.h  shader.h  texture.h
include/gl/: mesh.h  model.h  render_manager.h  shader.h  texture.h
include/utils/: file_utils.h  math_utils.h
shader/: cam.fs  cam.vs  line.vs  model.fs  model.vs  quad.fs  quad.vs
src/: face_multiviewer.cpp
